--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chart.js": "^4.4.9",
     "echarts": "^5.6.0",
+    "js-yaml": "^4.1.0",
     "vue": "^3.2.8",
     "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3"
