--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "js-yaml": "^4.1.0",
     "vue": "^3.2.8",
     "vue-chartjs": "^5.3.2",
-    "vue-echarts": "^7.0.3"
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
